# easypy

./: CMakeLists.txt  Pipfile  README.org
cmake/: easypy_deps.cmake
easypy/: CMakeLists.txt  config.hpp.in  easypy.hpp
easypy/details/: binding.hpp  import.hpp
easypy_testing/: CMakeLists.txt  aggregate_binding_test.cpp  enum_binding_test.cpp  introspective_binding_test.cpp  test_aggregate_binding_test.py.in  test_enum_binding_test.py.in  test_introspective_binding_test.py.in
scripts/: check-format.sh
